# InsightWire-proto

./: .gitignore  README_TELEGRAM_SESSION_MANAGER.md  pyproject.toml
src/: app.py  data.csv  session.session
src/.streamlit/: secrets.example.toml
src/insightwire/clients/: command_processor.py  exec_errors.py  telegram_client_wrapper.py  telegram_session_manager.py  tg_channel_client.py
src/tools/: tg_channel.py
tests/: test_telegram_session_manager.py
